--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ jwtSecret_email = my_jwt_for_auth
 jwtExpirationMs= 86400000
 jwtRefreshExpirationMs= 86400000
 
+spring.batch.job.enabled=false
+
 spring.main.allow-bean-definition-overriding=true
 
 management.security.enabled=false
