--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/erc-auth
+spring.datasource.url= jdbc:postgresql://localhost:5432/erc-test
 spring.datasource.username= postgres
 spring.datasource.password= root
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= false
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.generate-ddl=true
 
@@ -18,8 +18,5 @@ jwtSecret_email = my_jwt_for_auth
 jwtExpirationMs= 86400000
 jwtRefreshExpirationMs= 86400000
 
-spring.batch.job.enabled=false
-
 spring.main.allow-bean-definition-overriding=true
 
-management.security.enabled=false
