--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/erc-test
+spring.datasource.url= jdbc:postgresql://localhost:5432/erc-auth
 spring.datasource.username= postgres
 spring.datasource.password= root
 
