--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,9 @@ spring.jpa.generate-ddl=true
 # jwt Properties
 jwtSecret_auth= my_jwt_for_auth
 jwtSecret_email = my_jwt_for_auth
-jwtExpirationMs= 86400000
-jwtRefreshExpirationMs= 86400000
+#86400000
+jwtExpirationMs= 300000 
+jwtRefreshExpirationMs= 600000
 
 spring.main.allow-bean-definition-overriding=true
 
