--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,9 +15,9 @@ spring.jpa.generate-ddl=true
 # jwt Properties
 jwtSecret_auth= my_jwt_for_auth
 jwtSecret_email = my_jwt_for_auth
-#86400000
-jwtExpirationMs= 86400000
-jwtRefreshExpirationMs= 600000
+#86400000 >> 25H
+jwtExpirationMs= 1800000
+jwtRefreshExpirationMs= 3600000
 
 spring.main.allow-bean-definition-overriding=true
 
