implement enable,verified,lock method

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,3 +23,5 @@ spring.main.allow-bean-definition-overriding=true
 
 data.api.signUp = http://localhost:8081/api/data/user
 data.api.email = http://localhost:8081/api/data/user/email
+
+cookie.secure = false
