--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,3 +23,5 @@ spring.main.allow-bean-definition-overriding=true
 
 data.api.signUp = https://erc-data-service.herokuapp.com/api/data/user
 data.api.email = https://erc-data-service.herokuapp.com/api/data/user/email
+
+cookie.secure = true
