add  method to update role in data service

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,5 +23,6 @@ spring.main.allow-bean-definition-overriding=true
 
 data.api.signUp = https://erc-data-service.herokuapp.com/api/data/user
 data.api.email = https://erc-data-service.herokuapp.com/api/data/user/email
+data.api.role = https://erc-data-service.herokuapp.com/api/data/user/role
 
 cookie.secure = true
