--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,5 +23,6 @@ spring.main.allow-bean-definition-overriding=true
 
 data.api.signUp = http://localhost:8081/api/data/user
 data.api.email = http://localhost:8081/api/data/user/email
+data.api.role = http://localhost:8081/api/data/user/role
 
 cookie.secure = false
