--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,3 +26,9 @@ data.api.email = http://localhost:8081/api/data/user/email
 data.api.role = http://localhost:8081/api/data/user/role
 
 cookie.secure = false
+
+spring.activemq.broker-url=tcp://44.202.25.24:61616?wireFormat.maxInactivityDurationInitalDelay=30000
+
+#spring.activemq.broker-url=tcp://localhost:61616?wireFormat.maxInactivityDurationInitalDelay=30000
+spring.activemq.user=admin
+spring.activemq.password=admin
