enable notification service

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -25,4 +25,6 @@ data.api.signUp = https://erc-data-service.herokuapp.com/api/data/user
 data.api.email = https://erc-data-service.herokuapp.com/api/data/user/email
 data.api.role = https://erc-data-service.herokuapp.com/api/data/user/role
 
+notification.api.add = https://erc-notification-service.herokuapp.com/api/notification
+
 cookie.secure = true
