--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,16 +19,21 @@ jwtSecret_email = my_jwt_for_auth
 jwtExpirationMs= 86400000
 jwtRefreshExpirationMs= 3600000
 
+#eureka.client.service-url.defaultZone=http://localhost:8086/eureka
+#spring.application.name=auth-service
+
 spring.main.allow-bean-definition-overriding=true
 
 data.api.signUp = http://localhost:8081/api/data/user
 data.api.email = http://localhost:8081/api/data/user/email
 data.api.role = http://localhost:8081/api/data/user/role
 
+notification.api.add = http://localhost:8082/api/notification
+
 cookie.secure = false
 
-spring.activemq.broker-url=tcp://44.202.25.24:61616?wireFormat.maxInactivityDurationInitalDelay=30000
+#spring.activemq.broker-url=tcp://44.202.25.24:61616?wireFormat.maxInactivityDurationInitalDelay=30000
 
 #spring.activemq.broker-url=tcp://localhost:61616?wireFormat.maxInactivityDurationInitalDelay=30000
-spring.activemq.user=admin
-spring.activemq.password=admin
+#spring.activemq.user=admin
+#spring.activemq.password=admin
