fix bug in reject new user request

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,6 +24,7 @@ spring.main.allow-bean-definition-overriding=true
 data.api.signUp = https://erc-data-service.herokuapp.com/api/data/user
 data.api.email = https://erc-data-service.herokuapp.com/api/data/user/email
 data.api.role = https://erc-data-service.herokuapp.com/api/data/user/role
+data.api.reject = https://erc-data-service.herokuapp.com/api/data/user/remove/id
 
 notification.api.add = https://erc-notification-service.herokuapp.com/api/notification
 
