remove activemq and eureka

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,14 +19,21 @@ jwtSecret_email = my_jwt_for_auth
 jwtExpirationMs= 86400000
 jwtRefreshExpirationMs= 3600000
 
-#eureka.client.service-url.defaultZone=http://localhost:8086/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #spring.application.name=auth-service
+#spring.cloud.loadbalancer.cache.enabled=false
 
 spring.main.allow-bean-definition-overriding=true
+
+#data-service
+#data.api.signUp = http://data-service/api/data/user
+#data.api.email = http://data-service/api/data/user/email
+#data.api.role = http://data-service/api/data/user/role
 
 data.api.signUp = http://localhost:8081/api/data/user
 data.api.email = http://localhost:8081/api/data/user/email
 data.api.role = http://localhost:8081/api/data/user/role
+data.api.reject = http://localhost:8081/api/data/user/remove/id
 
 notification.api.add = http://localhost:8082/api/notification
 
