add rule to lock user state

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,6 +34,7 @@ data.api.signUp = http://localhost:8081/api/data/user
 data.api.email = http://localhost:8081/api/data/user/email
 data.api.role = http://localhost:8081/api/data/user/role
 data.api.reject = http://localhost:8081/api/data/user/remove/id
+data.api.stat = http://localhost:8081/api/data/user/stat
 
 notification.api.add = http://localhost:8082/api/notification
 
