--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -25,6 +25,7 @@ data.api.signUp = https://erc-data-service.herokuapp.com/api/data/user
 data.api.email = https://erc-data-service.herokuapp.com/api/data/user/email
 data.api.role = https://erc-data-service.herokuapp.com/api/data/user/role
 data.api.reject = https://erc-data-service.herokuapp.com/api/data/user/remove/id
+data.api.stat = https://erc-data-service.herokuapp.com/api/data/user/stat
 
 notification.api.add = https://erc-notification-service.herokuapp.com/api/notification
 
