change file size limit

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -40,8 +40,5 @@ notification.api.add = http://localhost:8082/api/notification
 
 cookie.secure = false
 
-#spring.activemq.broker-url=tcp://44.202.25.24:61616?wireFormat.maxInactivityDurationInitalDelay=30000
-
-#spring.activemq.broker-url=tcp://localhost:61616?wireFormat.maxInactivityDurationInitalDelay=30000
-#spring.activemq.user=admin
-#spring.activemq.password=admin
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
