--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -30,3 +30,6 @@ data.api.stat = https://erc-data-service.herokuapp.com/api/data/user/stat
 notification.api.add = https://erc-notification-service.herokuapp.com/api/notification
 
 cookie.secure = true
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
