--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -31,5 +31,5 @@ notification.api.add = https://erc-notification-service.herokuapp.com/api/notifi
 
 cookie.secure = true
 
-spring.servlet.multipart.max-file-size=20MB
-spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.max-file-size=20480KB
+spring.servlet.multipart.max-request-size=409600KB
